--- a/static/tsconfig.json
+++ b/static/tsconfig.json
@@ -1,12 +1,13 @@
 {
     "compilerOptions": {
-        "module": "commonjs",
-        "target": "es3",
-        "sourceMap": true,
-        "declaration": true,
+      "outDir": "./dist/",
+      "noImplicitAny": true,
+      "module": "commonjs",
+      "target": "es5",
+      "jsx": "react",
+      "allowJs": true
     },
     "exclude": [
         "node_modules"
     ]
-}
-
+  }
