--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "doc": "docs"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "compile_ts": "webpack",
+    "compile_mini_ts": "uglifyjs --compress --output ./static/js/bundle.js ./static/js/main.js"
   },
   "repository": {
     "type": "git",
@@ -27,6 +29,10 @@
   "homepage": "https://github.com/endalk200/CodeTopia#readme",
   "devDependencies": {
     "sass": "^1.25.0",
-    "typescript": "^3.7.5"
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.7.5",
+    "uglify-js": "^3.7.7",
+    "webpack": "^4.41.6",
+    "webpack-cli": "^3.3.11"
   }
 }
